@@ -15,6 +15,9 @@ public class MealsUtil {
 
     public static final int DEFAULT_CALORIES_COUNT = 2000;
 
+    private MealsUtil() {
+    }
+
     public static List<MealTo> getTos(Collection<Meal> meals, int caloriesPerDay) {
         return filterByPredicate(meals, caloriesPerDay, meal -> true);
     }
@@ -33,7 +36,7 @@ public class MealsUtil {
         return meals.stream()
                 .filter(predicate)
                 .map(meal -> createTo(meal, caloriesSumByDate.get(meal.getDate()) > caloriesPerDay))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static MealTo createTo(Meal meal, boolean excess) {
