@@ -6,7 +6,7 @@ import org.springframework.stereotype.Repository;
 
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 import static com.crevan.manager.UserTestData.*;
 
@@ -23,6 +23,7 @@ public class InMemoryUserRepository extends InMemoryBaseRepository<User> impleme
 
     @Override
     public User getByEmail(final String email) {
+        Objects.requireNonNull(email, "Email must be not null");
         return getCollection().stream()
                 .filter(user -> user.getEmail().equals(email))
                 .findFirst()
@@ -33,6 +34,6 @@ public class InMemoryUserRepository extends InMemoryBaseRepository<User> impleme
     public List<User> getAll() {
         return getCollection().stream()
                 .sorted(Comparator.comparing(User::getName).thenComparing(User::getEmail))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
